--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,11 @@
 name: Check Markdown links
 
-on: push
+on: 
+  push:
+    branches:
+    - master
+  schedule:
+  - cron: "0 9 * * *"
 
 jobs:
   markdown-link-check:
